# XieShui

./: .gitignore  LICENSE  README.md  XieShui 设计思路.md  package-lock.json  pyproject.toml  start.py
.github/workflows/: python-test.yml
backend/: app.py  auth.py  chat_handler.py  image_upload.py  knowledge_graph.py  models.py  test.py  websocket_server.py
backend/langplatform/: __init__.py  llm_manager.py  llms.py
backend/langplatform/agents/: agent_message_converter.py  agent_response_handler.py  init_agent_instruction.txt  main_agent.py
backend/langplatform/tools/: __init__.py  attempt_completion.py  core_tools.py  mcp_core_tools.py  question_request.py
backend/langplatform/utils/: api_key_loader.py
backend/langplatform/workflows/: __init__.py  for-test.txt
backend/tests/: test_knowledge_graph.py
backend/utils/: message_utils.py  parser.py
docs/: Agent开发计划.md  WebSocket通信方案.md  XieShui 设计思路.md  login_feature_plan.md  react_frontend_plan.md  websocket_migration_plan.md  作品设计方案.md  聊天功能增强实现计划.md  聊天功能重构计划.md
docs/frontend/: Chat对话容器.md
docs/langgraph/: model.md  tool.md  use_mcp.md
docs/prompts/: RooCode提示词.md
frontend/: health_check.html  index.html  login.html  welcome.html
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.css  App.jsx  index.css  main.jsx
frontend-react/src/components/: ChatContainer.jsx  HealthCheckPage.jsx  ImageUploadPreview.jsx  LoginPage.jsx  WelcomePage.jsx
frontend/css/: login.css  style.css  welcome.css
frontend/js/: health_check.js  login.js  script.js  welcome.js
(+15 files in other folders)
